fix footer spacing

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: 'Courier New', Courier, monospace;
+    text-align: center;
 }
 
 header {
@@ -108,8 +109,7 @@ button:hover {
 }
 
 footer {
-    display: flex;
-    justify-content: center;
+
     position: absolute;
     bottom: 0;
     left: 0;
